changement du nom

--- a/Education.html
+++ b/Education.html
@@ -7,7 +7,7 @@
       <div id="header">
         <!-- LOGOTYPE/NAME -->
         <div class="header_logotype_container">
-          <h1 class="logotype_name">Malkiel <span class="purple">Uadnaï</span></h1>
+            <h1 class="logotype_name">Malkiel <span class="purple">Vadnaï</span></h1>
           <h2 class="logotype_occupation">Frontend Web Developer</h2>
         </div>
         <!-- MAIN MENU -->
